invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_26.src
.IPPcode24
IDIV int@49 int@49 int@49